// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`openapi-client generator --zod should generate orval.zod config: test-client/orval.zod.config.js 1`] = `
"module.exports = {
  'test-client-file-transfomer': {
    output: {
      mode: 'split',
      target: './src/test-client.zod.ts',
      client: 'zod',
    },
    input: {
      target: './test.yaml',
    },
  },
};
"
`;

exports[`openapi-client generator should generate orval config: test-client/orval.config.js 1`] = `
"module.exports = {
  'test-client-file-transfomer': {
    output: {
      mode: 'split',
      target: './src/test-client.ts',
      schemas: './src/model',
      mock: true,
    },
    input: {
      target: './test.yaml',
    },
  },
};
"
`;
